calico-pod-networking/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-1
  labels:
    app: test-pod-1
spec:
  containers:
    - name: nginx
      image: nginx:1.28-alpine
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
      resources:
        requests:
          memory: "32Mi"
          cpu: "50m"
        limits:
          memory: "128Mi"
          cpu: "250m"

    - name: network-tools
      image: busybox:1.37
      imagePullPolicy: IfNotPresent
      command:
        - sh
        - -c
        - sleep 86400
      resources:
        requests:
          memory: "16Mi"
          cpu: "10m"
        limits:
          memory: "64Mi"
          cpu: "100m"
