calico-pod-networking/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-2
  labels:
    app: test-pod-2
spec:
  containers:
    - name: network-tools
      image: busybox:1.37
      imagePullPolicy: IfNotPresent
      command:
        - sh
        - -c
        - sleep 86400
      resources:
        requests:
          memory: "16Mi"
          cpu: "10m"
        limits:
          memory: "64Mi"
          cpu: "100m"
