calico-pod-networking/pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-3
  labels:
    app: test-pod-3
spec:
  containers:
    - name: network-tools
      image: nicolaka/netshoot:v0.14
      imagePullPolicy: IfNotPresent
      command:
        - sh
        - -c
        - sleep 86400
      resources:
        requests:
          memory: "32Mi"
          cpu: "20m"
        limits:
          memory: "128Mi"
          cpu: "200m"
