calico-pod-networking/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service-1
  labels:
    app: test-pod-1
spec:
  type: ClusterIP
  selector:
    app: test-pod-1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
