calico-pod-networking/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-test-pod-2-to-test-pod-1
spec:
  podSelector:
    matchLabels:
      app: test-pod-1
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: test-pod-2
      ports:
        - protocol: TCP
          port: 80
